@@ -90,8 +90,6 @@ Point Point::operator/= (real a)
   return *this;
 }
 //-----------------------------------------------------------------------------
-// Output
-//-----------------------------------------------------------------------------
 dolfin::LogStream& dolfin::operator<<(LogStream& stream, const Point& p)
 {
   stream << "[ Point x = " << p.x << " y = " << p.y << " z = " << p.z << " ]";
