@@ -1,6 +1,7 @@
 // Copyright (C) 2003 Johan Hoffman and Anders Logg.
 // Licensed under the GNU GPL Version 2.
 
+#include <dolfin/dolfin_settings.h>
 #include <dolfin/ODE.h>
 #include <dolfin/TimeSlab.h>
 #include <dolfin/TimeSlabData.h>
@@ -14,16 +15,25 @@ TimeSlabData::TimeSlabData(ODE& ode) : components(ode.size())
   
   // FIXME: u0 is stored at many places: first in ODE, then in components,
   // and then also in the elements
-  for (int i = 0; i < components.size(); i++)
+  for (unsigned int i = 0; i < components.size(); i++)
     components[i].u0 = ode.u0(i);
 
   //dolfin_debug1("components(index): %p", &(components(0)));
   //dolfin_debug1("components(index): %p", &(components(1)));
+  
+  // Check if we want to save debug info
+  debug = dolfin_get("debug time slab");
+
+  // Open debug file
+  if ( debug )
+    file.open("timeslab.debug", std::ios::out);
 }
 //-----------------------------------------------------------------------------
 TimeSlabData::~TimeSlabData()
 {
-  // Do nothing
+  // Close debug file
+  if ( debug )
+    file.close();
 }
 //-----------------------------------------------------------------------------
 Element* TimeSlabData::createElement(const Element::Type type, int q,
@@ -32,7 +42,12 @@ Element* TimeSlabData::createElement(const Element::Type type, int q,
   dolfin_debug3("creating element at: %d %lf-%lf", index,
 		timeslab->starttime(), timeslab->endtime());
 
+  // Create the new element
   Element *e = components[index].createElement(type, q, index, timeslab);
+
+  // Write debug info to file
+  if ( debug )
+    file << index << " " << e->starttime() << " " << e->endtime() << "\n";
 
   dolfin_debug2("components[%d].size(): %d", index, components[index].size());
 
