@@ -1,3 +1,4 @@
+ - Fix bool->int when using stdard in Parameter
  - Add NewArray and NewList (will replace Array and List)
 0.4.0
  - Initiation of the FEniCS project
